--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
             display: block;
             margin-bottom: 1.5em;
         }
-        
+
         label > span {
             display: inline-block;
             width: 8em;
@@ -34,7 +34,7 @@
 
         <label>
             <span>Email *</span>
-            <input v-model="model.email" v-form-ctrl name="email" type="email" required />
+            <input v-model="model.email" v-form-ctrl id="email" type="email" required />
         </label>
 
         <label>
@@ -71,10 +71,10 @@
             data: {
                 myform: {},
                 model: {
-                    contactRequired: false              
+                    contactRequired: false
                 }
             },
-            methods: {     
+            methods: {
                 onSubmit: function () {
                     console.log(this.myform.$valid);
                 }
